fix: resolve bug of not showing scrollbar on output textarea

--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@
     font-family: 'Source Code Pro', monospace;
     box-sizing: border-box;
     margin: 0;
+}
+
+body {
     overflow: hidden;
 }
 
